add push notification, fix obsolate coding